--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,19 @@
     box-sizing: border-box;
     margin: 0;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
+.num-indicator {
+  text-decoration: underline;
+}
+
+.hello {
+  background-image: url();
+}
+
 #name {
   position: relative;
 }
@@ -24,7 +37,7 @@
   #name::before {
     animation: blink 1s infinite;
     position: absolute;
-    right: -35px !important;
+    left: 550px !important;
     bottom: 0px;
     content: '';
     width: 18px !important;
@@ -36,7 +49,7 @@
 #name::before {
   animation: blink 1s infinite;
   position: absolute;
-  right: -15px;
+  left: 275px;
   bottom: 0px;
   content: '';
   width: 9px;
